Fix CSS formatting for text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,7 @@ body {
     line-height: 1.4;
     color: black;
     background-color: white;
-    text-align:center;
-    max-width:750px;        
+    text-align:center;   
 }
 
 img {
